--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon index.ts",
     "typecheck": "tsc --noemit",
     "format": "prettier . --write",
-    "format:check": "prettier . --check"
+    "format:check": "prettier . --check",
+    "lint": "eslint \"**/*.ts\""
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,9 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "eslint": "^8.56.0",
     "prettier": "3.2.5",
     "ts-node": "^10.9.2"
   }
