--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.14.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "redux-persist": "^6.0.0"
